fix assets loading

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BitChild | A Magic Existing
+title: Firefly | A Magic Existing
 description: "A minimal blog template, build with Jekyll."
 url: "cuckoo.daoapp.io"
 author:
